@startuml

skinparam linetype ortho

title Start Playback


''' Class definitions '''

Package "Presentation"
{
	class PlaybackView
}

Package "Application"
{
	class PlaybackController
	{
		startPlayback()
	}
}

Package "Domain"
{
	class RhythmPatternManager
	{
		rhythmPatterns : Array<RhythmPattern>
		resetAllPlaybackPositions()
	}

	class RhythmPattern
	{
		resetPlaybackPosition()
	}

	interface TempoTimer
	{
		clearCounter()
		start()
	}
}

Package "Hardware Abstraction Layer"
{
	class PushButton
	{
		isPressed() : Boolean
	}
}


''' Class relations '''

PlaybackView *--> PushButton
PlaybackView -down-> PlaybackController
PlaybackController --> TempoTimer
PlaybackController -left-> RhythmPatternManager
RhythmPatternManager "1..*"*-->"1" RhythmPattern

@enduml
